<resources>

    <string name="app_name">ExemploCadastroPessoaBD</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Cadastro de Pessoas</string>
    <string name="id">Id:</string>
    <string name="nome">Nome:</string>
    <string name="idade">Idade:</string>
    <string name="sexo">Sexo:</string>
    <string name="salvar">Salvar</string>
    <string name="novo">Novo</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="msgExclusao">Pessoa excluída com sucesso!</string>
    <string name="msgFalhaExclusao">Não foi possível excluir a pessoa!</string>
</resources>