<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"    
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/id" />

    <EditText
        android:id="@+id/edID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:editable="false"
        android:enabled="false"
        android:ems="10"
        android:layout_marginLeft="10dp"
        android:inputType="text"
        tools:ignore="Deprecated" >

    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/nome" />

    <EditText
        android:id="@+id/edNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="10dp"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/idade" />

    <EditText
        android:id="@+id/edIdade"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/sexo" />

    <Spinner
        android:id="@+id/spSexo"
        android:layout_width="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_height="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal" >

     <Button
         android:id="@+id/btnNovo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
         android:onClick="novo"
         android:text="@string/novo" />
        
    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:onClick="salvar"
        android:text="@string/salvar" />
    
    </LinearLayout>

    <ListView
        android:id="@+id/lvPessoas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp" >
    </ListView>

</LinearLayout>
